Prevent horizontal overflow

--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -1,5 +1,6 @@
 .notepad {
   padding: 16px 0;
+  overflow-x: hidden;
 
   .line {
     padding: 0 80px 16px 80px;
